property-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: fast_api1-app:latest      # ← under container
          imagePullPolicy: Never           # ← under container
          env:                             # ← under container
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: fastapi-secrets
                  key: DATABASE_URL
            - name: REDIS_URL
              valueFrom:
                secretKeyRef:
                  name: fastapi-secrets
                  key: REDIS_URL
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: fastapi-secrets
                  key: SECRET_KEY
            - name: ALGORITHM
              value: "HS256"
            - name: ACCESS_TOKEN_EXPIRE_DAYS
              value: "120"
            - name: REFRESH_TOKEN_EXPIRE_MONTHS
              value: "2"
          ports:                           # ← under container
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    app: fastapi
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
